less verbose (but more useful) logging.

--- a/helloworld/Dockerfile
+++ b/helloworld/Dockerfile
@@ -27,5 +27,5 @@ COPY scm-source.json /scm-source.json
 STOPSIGNAL SIGINT
 
 EXPOSE 8080
-CMD ceylon run --verbose --rep=/ceylon-modules --cacherep=/ceylon-cache org.zalando.ceylon_stups.helloWorld
+CMD ceylon run --rep=/ceylon-modules --cacherep=/ceylon-cache org.zalando.ceylon_stups.helloWorld
 
